finishing up idea one

--- a/hauptprojekt.tex
+++ b/hauptprojekt.tex
@@ -114,24 +114,24 @@
 	\frontmatter
 	
 	%% output title page
-	\maketitle
+%	\maketitle
 	
 	\onehalfspacing
 	
 	%% add abstract pages
 	%% note: this is one command on multiple lines
-	\HAWAbstractPage
-	%% German abstract
-	{GIS}%
-	{Diese Arbeit behandelt die Informationsgewinnung aus verschiedenen, überlappenden Datensätze.}
-	%% English abstract
-	{GIS}%
-	{This work covers the agregation of data from various data sources.}
+%	\HAWAbstractPage
+%	%% German abstract
+%	{GIS}%
+%	{Diese Arbeit behandelt die Informationsgewinnung aus verschiedenen, überlappenden Datensätze.}
+%	%% English abstract
+%	{GIS}%
+%	{This work covers the agregation of data from various data sources.}
 	
 	\newpage
 	\singlespacing
 	
-	\tableofcontents
+%	\tableofcontents
 	\newpage
 	%% enable if these lists should be shown on their own page
 	%%\listoftables
