Adjust structure of the paper

--- a/hauptprojekt.tex
+++ b/hauptprojekt.tex
@@ -148,7 +148,7 @@
 	%%%%%
 	%% customize (see readme.pdf for supported values)
 	\HAWThesisProperties{Author={Lennart Karsten}
-		,Title={Optimierung der GIS Lesegeschwindigkeit in einem Multi-Agenten Simulationssystem}
+		,Title={Optimizing GIS read performance inside a multi-agent simulation system}
 		,EnglishTitle={Optimizing GIS read performance inside a multi-agent simulation system}
 		,ThesisType={Hauptprojekt}
 		,ExaminationType={Masterprüfung}
@@ -199,7 +199,8 @@
 	\input{chapters/chapter2} % Groundwork
 	\input{chapters/chapter3} % Analysis
 	\input{chapters/chapter4} % Software Design
-	\input{chapters/chapter5} % End
+	\input{chapters/chapter5} % Implementation
+	\input{chapters/chapter6} % End
 	
 	
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
