Progress on related work and beginning of the analysis

--- a/hauptprojekt.tex
+++ b/hauptprojekt.tex
@@ -36,6 +36,8 @@
 \usepackage{csquotes}
 \usepackage{tabularx}
 \usepackage{subcaption}
+\usepackage{usecases}
+\usepackage{enumitem}
 
 % Initializing the functional requirements
 \newcommand{\reqinitF}{
