Finish CRS section

--- a/hauptprojekt.bib
+++ b/hauptprojekt.bib
@@ -56,3 +56,24 @@
 	year = {2001}
 }
 
+@misc{Decker1986,
+	author = {Decker, B L},
+	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Decker - 1986 - World Geodetic System 1984,(2).pdf:pdf},
+	keywords = {*GEODESY,*GRAVITY,ALTIMETERS,ARTIFICIAL SATELLITES,COEFFICIENTS,COORDINATES,DOPPLER SYSTEMS,EARTH MODELS,ELLIPSOIDS,FINITE DIFFERENCE THEORY,FORMULAS(MATHEMATICS),GEOIDS,GLOBAL,GRAVITY ANOMALIES,GROUND LEVEL,HARMONIC ANALYSIS,LASERS,LEAST SQUARES METHOD,ORIENTATION(DIRECTION),RADIO ALTIMETERS,SATELLITE TRACKING SYSTEMS,SOLUTIONS(GENERAL),SURFACES,WEIGHTING FUNCTIONS},
+	pages = {31},
+	title = {{World Geodetic System 1984,}},
+	url = {http://www.dtic.mil/docs/citations/ADA167570},
+	year = {1986}
+}
+@incollection{Grafarend1995,
+	author = {Grafarend, E.},
+	doi = {10.1007/978-3-642-79824-5_13},
+	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Grafarend - 1995 - The Optimal Universal Transverse Mercator Projection.pdf:pdf},
+	pages = {51},
+	publisher = {Springer, Berlin, Heidelberg},
+	title = {{The Optimal Universal Transverse Mercator Projection}},
+	url = {http://link.springer.com/10.1007/978-3-642-79824-5{\_}13},
+	year = {1995}
+}
+
+
