Finish Chapter 3 for now.

--- a/usecases.sty
+++ b/usecases.sty
@@ -21,14 +21,14 @@
 %-------------------------------------------------------------------------------
 %                \addtitle command: add the title of the use case
 %-------------------------------------------------------------------------------
-\newcommand\addtitle[2]{\hline \\ [-1.5ex] \textbf{#1} &\textbf{#2}\\ [1ex] \hline \\ [-1.5ex]}
+\newcommand\addtitle[2]{ \\ [-1.5ex] \textbf{#1} &\textbf{#2}\\ [1ex] \hline \\ [-1.5ex]}
 \newcommand\tabularhead{\begin{longtable}{lp{8.9cm}}
 }
 
 %-------------------------------------------------------------------------------
 %                \addfield command: add a property of the use case
 %-------------------------------------------------------------------------------
-\newcommand\addfield[2]{\textit{#1} &#2\\ [1ex] \hline \\ [-1.3ex] }
+\newcommand\addfield[2]{\textit{#1} &#2\\ [1ex] \hline \\ [-3ex] }
 
 %-------------------------------------------------------------------------------
 %                \addscenario command: add the main (or alternative) scenario
