add current state on chapter 4

--- a/hauptprojekt.tex
+++ b/hauptprojekt.tex
@@ -38,6 +38,7 @@
 \usepackage{subcaption}
 \usepackage{usecases}
 \usepackage{enumitem}
+\usepackage{pgfplots}
 
 % Initializing the functional requirements
 \newcommand{\reqinitF}{
