--- a/hauptprojekt.bib
+++ b/hauptprojekt.bib
@@ -1,61 +1,3 @@
-@inproceedings{Qiu2015,
-	author = {Qiu, Qiang and {Xiao Yao} and {Cuiting Chen} and {Yu Liu} and {Jinyun Fang}},
-	booktitle = {2015 23rd International Conference on Geoinformatics},
-	doi = {10.1109/GEOINFORMATICS.2015.7378651},
-	file = {:home/lennart/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Qiu et al. - 2015 - A spatial data partitioning and merging method for parallel vector spatial analysis.pdf:pdf},
-	isbn = {978-1-4673-7663-1},
-	month = {jun},
-	pages = {1--5},
-	publisher = {IEEE},
-	title = {{A spatial data partitioning and merging method for parallel vector spatial analysis}},
-	url = {http://ieeexplore.ieee.org/document/7378651/},
-	year = {2015}
-}
-
-@mastersthesis{Baldowski2014,
-	author       = {Mariusz Baldowski}, 
-	title        = {Räumliche Analyse mit spatialen Indikatoren},
-	school       = {Hochschule für Angewandte Wissenschaften},
-	year         = 2014,
-	month        = 8,
-}
-
-@article{Kovalerchuk2011,
-	author = {Kovalerchuk, B},
-	doi = {10.1117/12.886512},
-	file = {:home/lennart/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Kovalerchuk, Doucette - 2011 - MapSnap system to perform vector-to-raster fusion.pdf:pdf},
-	isbn = {9780819486271},
-	issn = {0277786X},
-	journal = {SPIE Defense, {\ldots}},
-	title = {{MapSnap system to perform vector-to-raster fusion}},
-	url = {http://proceedings.spiedigitallibrary.org/proceeding.aspx?articleid=1270934},
-	year = {2011}
-}
-
-@article{Zhang2010,
-	abstract = {With the fast development of remote sensor technologies, e.g. the appearance of Very High Resolution (VHR) optical sensors, SAR, LiDAR, etc., mounted on either airborne or spaceborne platforms, multi-source remote sensing data fusion techniques are emerging due to the demand for new methods and algorithms. The general fusion techniques have been well developed and applied in various fields ranging from satellite earth observation to computer vision, medical image processing, defence security and so on. Despite the fast development, the techniques remain challenging for multi-source data fusion within varying spatial and temporal resolutions. This article reviews current techniques of multi-source remote sensing data fusion and discusses their future trends and challenges through the concept of hierarchical classification, i.e., pixel/data level, feature level and decision level. This article concentrates on discussing optical panchro-matic and multi-spectral data fusing methods. So far, the pixel level fusion methods have mainly focused on optical data fusion; high-level fusion includes feature level and decision level fusion of multi-source data, such as synthetic aperture radar, optical images, LiDAR and other types of data. Finally, this article summarises several trends tending to broaden the application of multi-source data fusion. 1. Introduction Data fusion, as a general and popular multi-discipline approach, combines data from multiple sources to improve the potential values and interpretation performances of the source data, and to produce a high-quality visible representation of the data. Fusion techniques are useful for a variety of applications, ranging from object detection, recognition, identification and classification, to object tracking, change detection, decision making, etc. It has been successfully applied in the space and earth observation domains, computer vision, medical image analysis and defence security, etc. Remote sensing data fusion, as one of the most commonly used techniques, aims to integrate the information acquired with different spatial and spectral resolutions from sensors mounted on satellites, aircraft and ground platforms to produce fused data that contains more detailed information than each of the sources. Research on data fusion has a long history in the remote sensing community because fusion products are the basis for many applications. Researchers and practitioners have},
-	author = {Zhang, Jixian},
-	doi = {10.1080/19479830903561035},
-	file = {:home/lennart/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Zhang - 2010 - Multi-source remote sensing data fusion status and trends.pdf:pdf},
-	journal = {International Journal of Image and Data Fusion},
-	keywords = {LiDAR,SAR,data fusion,multi-source remote sensing data},
-	number = {1},
-	pages = {5--24},
-	title = {{Multi-source remote sensing data fusion: status and trends}},
-	url = {http://www.tandfonline.com/doi/pdf/10.1080/19479830903561035?needAccess=true},
-	volume = {1},
-	year = {2010}
-}
-
-@article{Kovalerchuk2001,
-	author = {Kovalerchuk, Boris and Schwing, James},
-	file = {:home/lennart/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Kovalerchuk, Schwing - 2001 - Mathematical support for combining geospatial data.pdf:pdf},
-	journal = {Conference on Imaging Science, Systems, and {\ldots}},
-	title = {{Mathematical support for combining geospatial data}},
-	url = {http://www.cwu.edu/~Imaglab/docs/CISST_1023CT.pdf},
-	year = {2001}
-}
-
 @misc{Decker1986,
 	author = {Decker, B L},
 	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Decker - 1986 - World Geodetic System 1984,(2).pdf:pdf},
@@ -75,5 +17,23 @@
 	url = {http://link.springer.com/10.1007/978-3-642-79824-5{\_}13},
 	year = {1995}
 }
-
-
+@mastersthesis{Baldowski2014,
+	author       = {Mariusz Baldowski}, 
+	title        = {Räumliche Analyse mit spatialen Indikatoren},
+	school       = {Hochschule für Angewandte Wissenschaften},
+	year         = 2014,
+	month        = 8,
+}
+@article{Huning2016,
+	abstract = {{\textcopyright} 2016 Society for Modeling {\&} Simulation International (SCS).There is an increasing demand for very large-scale agentbased models. High numbers of individual entities and complex interactions between them require new ways of modeling and simulation. The creation of a distributed simulation model imposes a major challenge in the fields of network communication and coordination to the developer. Integrating multi-scale GIS and time-series data into such a model is another challenge altogether. We introduce the massive Multi-Agent Research and Simulation system (MARS). It is designed to provide a Modeling and Simulation as a Service (MSaaS) solution to end users. MARS allows domain experts to integrate their data and models through a user-friendly web interface. The complexity of distributed and scalable simulation is handled in the background by a mechanism we call Agent Shadowing. Finally a layer-based segmentation of the model is proposed. It allows domain specialists to focus on one aspect at a time while developing their simulation model. A large-scale model from the ecological modeling domain is showcased. The model integrates various GIS data formats with collected time-series dataseis and simulates a scalable amount of agents. Results from this simulation demonstrate the capabilities of MARS to support the workflow as required by the development of large-scale agent-based simulation models.},
+	author = {H{\"{u}}ning, Christian and Adebahr, Mitja and Thiel-Clemen, Thomas and Dalski, Jan and Lenfers, Ulfia and Grundmann, Lukas and Dybulla, Janus and Kiker, Gregory A.},
+	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Uning et al. - Unknown - Modeling {\&}amp Simulation as a Service with the Massive Multi-Agent System MARS.pdf:pdf},
+	isbn = {978-1-5108-2315-0},
+	issn = {07359276},
+	journal = {Spring Simulation Multiconference},
+	keywords = {ACM Classification Keywords,Author Keywords MSaaS,Multi-Agent System,cloud computing,distributed simulation},
+	pages = {to appear},
+	title = {{Modeling {\&} Simulation as a Service with the Massive Multi-Agent System MARS}},
+	url = {http://delivery.acm.org/10.1145/2980000/2972194/a1-huning.pdf?ip=141.22.29.209{\&}id=2972194{\&}acc=ACTIVE SERVICE{\&}key=2BA2C432AB83DA15.7953D496BAF38C0F.4D4702B0C3E38B35.4D4702B0C3E38B35{\&}CFID=979118366{\&}CFTOKEN=56484555{\&}{\_}{\_}acm{\_}{\_}=1504188755{\_}0dab09414e993a38550dc7d7848c03ea},
+	year = {2016}
+}
