--- a/hauptprojekt.tex
+++ b/hauptprojekt.tex
@@ -24,7 +24,7 @@
 \usepackage{pifont}
 \usepackage{microtype}
 \usepackage{textcomp}
-\usepackage[german,refpage]{nomencl}
+\usepackage[english,refpage]{nomencl}
 \usepackage{setspace}
 \usepackage{makeidx}
 \usepackage{listings}
@@ -156,7 +156,7 @@
 		,ThesisType={Hauptprojekt}
 		,ExaminationType={Masterprüfung}
 		,DegreeProgramme={Master Informatik}
-		,ThesisExperts={Prof. Dr. Clemen}
+		,ThesisExperts={Prof. Dr. Thomas Clemen}
 		,ReleaseDate={\today}
 	}
 
@@ -217,7 +217,7 @@
 	
 	\typeout{===== Section: literature}
 	%% read the documentation for customizing the style
-	\bibliographystyle{dinat}
+	\bibliographystyle{apa}
 	\bibliography{hauptprojekt}
 	
 	\typeout{===== Section: nomenclature}
