Pimp my Bibliography

--- a/hauptprojekt.bib
+++ b/hauptprojekt.bib
@@ -17,12 +17,22 @@
 	url = {http://link.springer.com/10.1007/978-3-642-79824-5{\_}13},
 	year = {1995}
 }
-@mastersthesis{Baldowski2014,
-	author       = {Mariusz Baldowski}, 
-	title        = {Räumliche Analyse mit spatialen Indikatoren},
-	school       = {Hochschule für Angewandte Wissenschaften},
-	year         = 2014,
-	month        = 8,
+@article{Graham2013,
+	abstract = {As digital social data have become increasingly ubiquitous, many have turned their attention to harnessing these massive data sets in order to produce purportedly more accurate and complete understandings of social processes. This intervention addresses the relationships between geography and big data and their intertwined futures. We focus on the impacts of an age of big data on the discipline of geography and geographic thought and methodology, as well as how geography might provide a useful lens through which to understand big data as a social phenomenon in its own right. Ultimately, we see significant potential in big data, but remain skeptical of the prevalent discourses around it, as they tend to obscure, more than reveal, the complexity of social and spatial processes.},
+	author = {Graham, Mark and Shelton, Taylor},
+	doi = {10.1177/2043820613513121},
+	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Graham, Shelton - 2013 - Geography and the future of big data, big data and the future of geography.pdf:pdf},
+	isbn = {2043820613},
+	issn = {2043-8206},
+	journal = {Dialogues in Human Geography},
+	keywords = {all manner of social,are digitizing and storing,big data,data are now ubiquitous,geographic thought,positivism,sensors and software},
+	mendeley-groups = {GIS Big Data},
+	number = {3},
+	pages = {255--261},
+	title = {{Geography and the future of big data, big data and the future of geography}},
+	url = {http://journals.sagepub.com/doi/pdf/10.1177/2043820613513121 http://dhg.sagepub.com/content/3/3/255.short{\%}5Cnhttp://dhg.sagepub.com/lookup/doi/10.1177/2043820613513121{\%}5Cnhttp://dhg.sagepub.com/lookup/doi/10.1177/2043820613513121},
+	volume = {3},
+	year = {2013}
 }
 @article{Huning2016,
 	abstract = {{\textcopyright} 2016 Society for Modeling {\&} Simulation International (SCS).There is an increasing demand for very large-scale agentbased models. High numbers of individual entities and complex interactions between them require new ways of modeling and simulation. The creation of a distributed simulation model imposes a major challenge in the fields of network communication and coordination to the developer. Integrating multi-scale GIS and time-series data into such a model is another challenge altogether. We introduce the massive Multi-Agent Research and Simulation system (MARS). It is designed to provide a Modeling and Simulation as a Service (MSaaS) solution to end users. MARS allows domain experts to integrate their data and models through a user-friendly web interface. The complexity of distributed and scalable simulation is handled in the background by a mechanism we call Agent Shadowing. Finally a layer-based segmentation of the model is proposed. It allows domain specialists to focus on one aspect at a time while developing their simulation model. A large-scale model from the ecological modeling domain is showcased. The model integrates various GIS data formats with collected time-series dataseis and simulates a scalable amount of agents. Results from this simulation demonstrate the capabilities of MARS to support the workflow as required by the development of large-scale agent-based simulation models.},
@@ -37,3 +47,98 @@
 	url = {http://delivery.acm.org/10.1145/2980000/2972194/a1-huning.pdf?ip=141.22.29.209{\&}id=2972194{\&}acc=ACTIVE SERVICE{\&}key=2BA2C432AB83DA15.7953D496BAF38C0F.4D4702B0C3E38B35.4D4702B0C3E38B35{\&}CFID=979118366{\&}CFTOKEN=56484555{\&}{\_}{\_}acm{\_}{\_}=1504188755{\_}0dab09414e993a38550dc7d7848c03ea},
 	year = {2016}
 }
+@article{Kitchin2013,
+	abstract = {We are entering an era of big data - data sets that are characterised by high volume, velocity, variety, exhaustivity, resolution and indexicality, relationality and flexibility. Much of these data are spatially and temporally referenced and offer many possibilities for enhancing geographical understanding, including for post-positivist scholars. Big data also, however, poses a number of challenges and risks to geographic scholarship and raises a number of taxing epistemological, methodological and ethical questions. Geographers need to grasp the opportunities whilst at the same time tackling the challenges, ameliorating the risks and thinking critically about big data as well as conducting big data studies. Failing to do so could be quite costly as the discipline gets left behind as others leverage insights from the growing data deluge.},
+	author = {Kitchin, Rob},
+	doi = {10.1177/2043820613513388},
+	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Kitchin - 2013 - Big data and human geography Opportunities, challenges and risks.pdf:pdf},
+	isbn = {2043820613},
+	issn = {2043-8206},
+	journal = {Dialogues in Human Geography},
+	keywords = {and practices,big data,data deluge,human geography,like many terms used,methodology,praxis,rapidly evol-,theory,there is no,to refer to the,ving use of technologies},
+	mendeley-groups = {GIS Big Data},
+	number = {3},
+	pages = {262--267},
+	title = {{Big data and human geography: Opportunities, challenges and risks}},
+	url = {http://journals.sagepub.com/doi/pdf/10.1177/2043820613513388 http://dhg.sagepub.com/content/3/3/262.short{\%}5Cnhttp://dhg.sagepub.com/lookup/doi/10.1177/2043820613513388},
+	volume = {3},
+	year = {2013}
+}
+@article{Lee2015,
+	abstract = {Geospatial big data refers to spatial data sets exceeding capacity of current computing systems. A significant portion of big data is actually geospatial data, and the size of such data is growing rapidly at least by 20{\%} every year. In this paper, we explore the challenges and opportunities which geospatial big data brought us. Several case studies are introduced to show the importance and benefits of the analytics of geospatial big data, including fuel and time saving, revenue increase, urban planning, and health care. Then, we introduce new emerging platforms for sharing the collected geospatial big data and for tracking human mobility via mobile devices. The researchers in academia and industry have spent a lot of efforts to improve the value of geospatial big data as well as take advantage of its value. Along the same line, we present our current research activities toward the analytics of geospatial big data, especially on interactive analytics of real-time or dynamic data.},
+	author = {Lee, Jae-Gil and Kang, Minseo},
+	doi = {10.1016/j.bdr.2015.01.003},
+	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Lee, Kang - 2015 - Geospatial Big Data Challenges and Opportunities.pdf:pdf},
+	isbn = {2214-5796},
+	issn = {22145796},
+	journal = {Big Data Research},
+	keywords = {Complex event processing,Geospatial big data,Spatial big data,Spatial online analytical processing},
+	mendeley-groups = {GIS Big Data},
+	number = {2},
+	pages = {74--81},
+	title = {{Geospatial Big Data: Challenges and Opportunities}},
+	url = {www.elsevier.com/locate/bdr http://www.sciencedirect.com/science/article/pii/S2214579615000040 http://linkinghub.elsevier.com/retrieve/pii/S2214579615000040},
+	volume = {2},
+	year = {2015}
+}
+@inproceedings{Pandey2016,
+	address = {New York, New York, USA},
+	author = {Pandey, Varun and Kipf, Andreas and Vorona, Dimitri and M{\"{u}}hlbauer, Tobias and Neumann, Thomas and Kemper, Alfons},
+	booktitle = {Proceedings of the 2016 International Conference on Management of Data - SIGMOD '16},
+	doi = {10.1145/2882903.2899412},
+	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Pandey et al. - 2016 - High-Performance Geospatial Analytics in HyPerSpace.pdf:pdf},
+	isbn = {9781450335317},
+	keywords = {geospatial data processing,indexing schemes},
+	mendeley-groups = {GIS Performance},
+	pages = {2145--2148},
+	publisher = {ACM Press},
+	title = {{High-Performance Geospatial Analytics in HyPerSpace}},
+	url = {http://dl.acm.org/citation.cfm?doid=2882903.2899412},
+	year = {2016}
+}
+@article{Pavlo2009,
+	abstract = {There is currently considerable enthusiasm around the MapReduce (MR) paradigm for large-scale data analysis 17. Although the basic control flow of this framework has existed in parallel SQL database management systems (DBMS) for over 20 years, some have called MR a dramatically new computing model 8, 17. In this paper, we describe and compare both paradigms. Furthermore, we evaluate both kinds of systems in terms of performance and development complexity. To this end, we define a benchmark consisting of a collection of tasks that we have run on an open source version of MR as well as on two parallel DBMSs. For each task, we measure each system's performance for various degrees of parallelism on a cluster of 100 nodes. Our results reveal some interesting trade-offs. Although the process to load data into and tune the execution of parallel DBMSs took much longer than the MR system, the observed performance of these DBMSs was strikingly better. We speculate about the causes of the dramatic performance difference and consider implementation concepts that future systems should take from both kinds of architectures.},
+	address = {New York, New York, USA},
+	author = {Pavlo, Andrew and Paulson, Erik and Rasin, Alexander and Abadi, Daniel J. and DeWitt, David J. and Madden, Samuel and Stonebraker, Michael},
+	doi = {10.1145/1559845.1559865},
+	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Pavlo et al. - 2009 - A comparison of approaches to large-scale data analysis.pdf:pdf},
+	isbn = {9781605585512},
+	journal = {Distribution},
+	keywords = {Database Applications,Database Program,Use Cases},
+	mendeley-groups = {GIS Performance},
+	number = {2},
+	pages = {165--178},
+	publisher = {ACM Press},
+	title = {{A Comparison of Approaches to Large-Scale Data Analysis}},
+	url = {http://portal.acm.org/citation.cfm?doid=1559845.1559865 http://portal.acm.org/citation.cfm?id=1559865},
+	volume = {12},
+	year = {2009}
+}
+@article{Wang2011,
+	abstract = {Querying and analyzing large volumes of spatially oriented scien- tific data becomes increasingly important for many applications. For example, analyzing high-resolution digital pathology images through computer algorithms provides rich spatially derived infor- mation of micro-anatomic objects of human tissues. The spatial oriented information and queries at both cellular and sub-cellular scales share common characteristics of “Geographic Information System (GIS)”, and provide an effective vehicle to support com- puter aided biomedical research and clinical diagnosis through dig- ital pathology. The scale of data could reach a million derived spa- tial objects and hundred million features for a single image. Man- aging and querying such spatially derived data to support complex queries such as image-wise spatial cross-matching queries poses two major challenges: the high complexity of geometric compu- tation and the “big data” challenge. In this paper, we present a system Hadoop-GIS to support high performance declarative spa- tial queries with MapReduce. Hadoop-GIS provides an efficient real-time spatial query engine RESQUE with dynamically built in- dices to support on the fly spatial query processing. To support high performance queries with cost effective architecture, we develop a MapReduce based framework for data partitioning and staging, parallel processing of spatial queries with RESQUE, and feature queries with Hive, running on commodity clusters. To provide a declarative query language and unified interface, we integrate spa- tial query processing into Hive to build an integrated query system. Hadoop-GIS demonstrates highly scalable performance to support our query cases.},
+	author = {Wang, Fusheng and Saltz, Joel H and Aji, Ablimit and Liu, Qiaoling},
+	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Wang et al. - 2011 - Center for Comprehensive Informatics Hadoop-GIS A High Performance Spatial Query System for Analytical Medical Imag.pdf:pdf},
+	mendeley-groups = {GIS Performance},
+	pages = {13},
+	title = {{Hadoop-GIS : A High Performance Spatial Query System for Analytical Medical Imaging with MapReduce}},
+	url = {http://www3.cs.stonybrook.edu/{~}fuswang/papers/CCI-TR-2011-3.pdf http://confluence.cci.emory.edu:8090//download/attachments/4033450/CCI-TR-2011-3.pdf},
+	year = {2011}
+}
+@article{Witayangkurn2012,
+	address = {New York, New York, USA},
+	author = {Witayangkurn, Apichon and Horanont, Teerayut and Shibasaki, Ryosuke},
+	doi = {10.1145/2345316.2345346},
+	file = {:Users/lennart/Library/Application Support/Mendeley Desktop/Downloaded/Witayangkurn, Horanont, Shibasaki - 2012 - Performance comparisons of spatial data processing techniques for a large scale mobile phone.pdf:pdf},
+	isbn = {9781450311137},
+	journal = {Proceedings of the 3rd International Conference on Computing for Geospatial Research and Applications - COM.Geo '12},
+	keywords = {GPS,Hadoop,cloud computing,mobile phone,spatial query},
+	mendeley-groups = {GIS Performance},
+	pages = {1},
+	publisher = {ACM Press},
+	title = {{Performance comparisons of spatial data processing techniques for a large scale mobile phone dataset}},
+	url = {http://dl.acm.org/citation.cfm?doid=2345316.2345346},
+	year = {2012}
+}
+
+
+
