Corrections for the first draft

--- a/hauptprojekt.tex
+++ b/hauptprojekt.tex
@@ -151,8 +151,8 @@
 	%%%%%
 	%% customize (see readme.pdf for supported values)
 	\HAWThesisProperties{Author={Lennart Karsten}
-		,Title={Optimizing GIS read performance inside a multi-agent simulation system}
-		,EnglishTitle={Optimizing GIS read performance inside a multi-agent simulation system}
+		,Title={Optimizing geospatial read performance\\inside a multi-agent simulation system}
+%		,EnglishTitle={Optimizing geospatial read performance inside a multi-agent simulation system}
 		,ThesisType={Hauptprojekt}
 		,ExaminationType={Masterprüfung}
 		,DegreeProgramme={Master Informatik}
@@ -172,11 +172,11 @@
 	%% note: this is one command on multiple lines
 	\HAWAbstractPage
 	%% German abstract
-	{GIS}%
-	{Deutscher Abstract.}
+	{GIS, performance, Multi-agent simulation}%
+	{This work evaluates and suggests improvements to the geospatial performance of a multi-agent simulation system. The suggestions are evaluated and performance tested. The results allow GIS to be used for millions of agents.}
 	%% English abstract
-	{GIS}%
-	{english abstract.}
+%	{GIS, performance, Multi-agent simulation}%
+%	{english abstract.}
 	
 	\newpage
 	\singlespacing
