--- a/hauptprojekt.tex
+++ b/hauptprojekt.tex
@@ -127,16 +127,13 @@
 	\hypersetup{bookmarksopen=false,bookmarksnumbered,linktocpage}
 }{}
 
-%% more fancy C++
-\DeclareRobustCommand{\cxx}{C\raisebox{0.25ex}{{\scriptsize +\kern-0.25ex +}}}
-
 \clubpenalty=10000
 \widowpenalty=10000
 \displaywidowpenalty=10000
 
 % unknown hyphenations
-\hyphenation{
-}
+%\hyphenation{
+%}
 
 %% recalculate text area
 \typearea[current]{last}
@@ -151,8 +148,8 @@
 	%%%%%
 	%% customize (see readme.pdf for supported values)
 	\HAWThesisProperties{Author={Lennart Karsten}
-		,Title={Optimizing geospatial read performance\\inside a multi-agent simulation system}
-%		,EnglishTitle={Optimizing geospatial read performance inside a multi-agent simulation system}
+		,Title={Optimizing geospatial read-performance\\inside a multi-agent simulation system}
+%		,EnglishTitle={Optimizing geospatial read-performance inside a multi-agent simulation system}
 		,ThesisType={Hauptprojekt}
 		,ExaminationType={Masterprüfung}
 		,DegreeProgramme={Master Informatik}
@@ -173,7 +170,7 @@
 	\HAWAbstractPage
 	%% German abstract
 	{GIS, performance, Multi-agent simulation}%
-	{This work evaluates and suggests improvements to the geospatial performance of a multi-agent simulation system. The suggestions are evaluated and performance tested. The results allow GIS to be used for millions of agents.}
+	{This work evaluates and suggests improvements to the geospatial performance of a multi-agent simulation system. The suggestions are evaluated and performance tested and the results allow GIS to be used for large scale simulations.\\}
 	%% English abstract
 %	{GIS, performance, Multi-agent simulation}%
 %	{english abstract.}
