Add Show-case to implementation

--- a/hauptprojekt.tex
+++ b/hauptprojekt.tex
@@ -39,6 +39,7 @@
 \usepackage{usecases}
 \usepackage{enumitem}
 \usepackage{pgfplots}
+\usepackage{siunitx}
 
 % Initializing the functional requirements
 \newcommand{\reqinitF}{
